k8s/azure-vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-azure-vote-back
  namespace: azure-vote
  labels:
    appName: azure-vote-back
    version: v1
spec:
  ports:
    - port: 6379
  selector:
    app: azure-vote-back
---
apiVersion: v1
kind: Service
metadata:
  name: svc-azure-vote-front
  namespace: azure-vote
  labels:
    appName: azure-vote-front
    version: v1
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: azure-vote-front
