k8s/azure-vote-drl.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: drl-azure-vote-front
spec:
  host: azure-vote-front.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: v1
      labels:
        version: v1
      trafficPolicy:
        loadBalancer:
          simple: LEAST_REQUEST
    - name: alt1
      labels:
        version: alt1
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
    - name: alt2
      labels:
        version: alt2
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 100
            # connectTimeout: 30ms
            # tcpKeepalive:
            #   time: 7200s
            #   interval: 75s
          http:
            # http1MaxRequests: 100
            http2MaxRequests: 100
            maxRequestsPerConnection: 10
        outlierDetection:
          consecutive5xxErrors: 3
          consecutiveErrors: 7
          interval: 5m
          baseEjectionTime: 15m
          maxEjectionPercent: 90
